--- a/package.json
+++ b/package.json
@@ -1,1 +1,89 @@
-{"version":"0.0.1","license":"MIT","main":"dist/index.js","typings":"dist/index.d.ts","files":["dist","src"],"engines":{"node":">=10"},"scripts":{"start":"tsdx watch","build":"tsdx build","test":"tsdx test --passWithNoTests","lint":"tsdx lint","prepare":"tsdx build","size":"size-limit","analyze":"size-limit --why"},"peerDependencies":{"react":">=16"},"husky":{"hooks":{"pre-commit":"tsdx lint"}},"prettier":{"printWidth":80,"semi":true,"singleQuote":true,"trailingComma":"es5"},"name":"jsua-product-card","author":"Juan Usuga","module":"dist/jsua-product-card.esm.js","size-limit":[{"path":"dist/jsua-product-card.cjs.production.min.js","limit":"10 KB"},{"path":"dist/jsua-product-card.esm.js","limit":"10 KB"}],"devDependencies":{"@rollup/plugin-image":"^2.1.1","@size-limit/preset-small-lib":"^7.0.8","@types/react":"^17.0.43","@types/react-dom":"^17.0.14","husky":"^7.0.4","react":"^18.0.0","react-dom":"^18.0.0","rollup-plugin-postcss":"^4.0.2","size-limit":"^7.0.8","tsdx":"^0.14.1","tslib":"^2.3.1","typescript":"^3.9.10"}}
+{
+    "version": "0.0.1",
+    "license": "MIT",
+    "main": "dist/index.js",
+    "typings": "dist/index.d.ts",
+    "files": [
+        "dist",
+        "src"
+    ],
+    "repository": {
+        "url": "https://github.com/usuga1931/jsua-product-card",
+        "type": "git"
+    },
+    "engines": {
+        "node": ">=10"
+    },
+    "scripts": {
+        "start": "tsdx watch",
+        "build": "tsdx build",
+        "test": "tsdx test --passWithNoTests",
+        "test:watch": "tsdx test --watch",
+        "lint": "tsdx lint",
+        "prepare": "tsdx build",
+        "size": "size-limit",
+        "analyze": "size-limit --why"
+    },
+    "peerDependencies": {
+        "react": ">=16"
+    },
+    "husky": {
+        "hooks": {
+            "pre-commit": "tsdx lint"
+        }
+    },
+    "prettier": {
+        "printWidth": 80,
+        "semi": true,
+        "singleQuote": true,
+        "trailingComma": "es5"
+    },
+    "name": "jsua-product-card",
+    "author": "Juan Usuga",
+    "module": "dist/jsua-product-card.esm.js",
+    "size-limit": [
+        {
+            "path": "dist/jsua-product-card.cjs.production.min.js",
+            "limit": "10 KB"
+        },
+        {
+            "path": "dist/jsua-product-card.esm.js",
+            "limit": "10 KB"
+        }
+    ],
+    "devDependencies": {
+        "@rollup/plugin-image": "^2.1.1",
+        "@size-limit/preset-small-lib": "^7.0.8",
+        "@types/react": "^17.0.43",
+        "@types/react-dom": "^17.0.14",
+        "husky": "^7.0.4",
+        "identity-obj-proxy": "^3.0.0",
+        "react": "^18.0.0",
+        "react-dom": "^18.0.0",
+        "rollup-plugin-postcss": "^4.0.2",
+        "size-limit": "^7.0.8",
+        "tsdx": "^0.14.1",
+        "tslib": "^2.3.1",
+        "typescript": "^3.9.10",
+        "@babel/preset-env": "^7.16.11",
+        "@babel/preset-react": "^7.16.7",
+        "@types/react-test-renderer": "^17.0.1",
+        "babel-jest": "^27.5.1",
+        "jest": "^25.5.4",
+        "react-test-renderer": "^18.0.0"
+    },
+    "keywords": [
+        "product",
+        "card",
+        "juan",
+        "usuga"
+    ],
+    "dependencies": {
+    },
+    "jest": {
+        "moduleNameMapper": {
+            "\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$": "identity-obj-proxy",
+            "\\.(css|less|scss|sass)$": "identity-obj-proxy"
+        }
+    }
+}
